# arm_urdf_nova

./: CMakeLists.txt  package.xml
launch/: display.launch  gazebo.launch  urdf.launch.py  viz.launch.py
meshes/: base_link.STL  upper_arm_link.STL  wrist_a_link.STL  wrist_b_link.STL
urdf/: arm_urdf_attempt_1.csv  arm_urdf_attempt_1.urdf
